# ESP32_FreeRTOS_Thermostat

./: .gitignore  CMakeLists.txt  sdkconfig
components/app_thermostat/: CMakeLists.txt
components/app_thermostat/include/app/: task_buttons.h  task_common.h  task_control.h  task_display.h  task_heartbeat.h  task_logger.h  task_net.h  task_sensors.h
components/app_thermostat/src/: task_buttons.c  task_common.c  task_control.c  task_display.c  task_heartbeat.c  task_logger.c  task_net.c  task_sensors.c
components/core/: CMakeLists.txt
components/core/include/core/: app_types.h  config.h  error.h  logging.h  thermostat.h  thermostat_config.h  timeutil.h  watchdog.h
components/core/src/: error.c  logging.c  thermostat.c  thermostat_config.c  timeutil.c  watchdog.c
components/drivers_thermostat/: CMakeLists.txt
components/drivers_thermostat/include/drivers/: drv_buttons.h  drv_display.h  drv_temp_sensors.h
components/drivers_thermostat/src/: drv_buttons.c  drv_display.c  drv_temp_sensors.c
main/: CMakeLists.txt  app_main.c  thermostat.c
